Tweak wholesalers + fix spacing on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ label {
 }
 
 #about #description {
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 
